# save-the-bakery

./: .gitignore  README.md  pyproject.toml  requirements.txt
diagrams/: stb_class_diagram
major_town/: background.py  bullet.py  main.py  player.py
save-the-bakery/: Asteroid.py  Background.py  Bullet.py  Player.py  PowerUp.py  SaveTheBakery.py  config.py  main.py  player.py
save_the_bakery/: Animation.py  Asteroid.py  Background.py  Bullet.py  DeathStar.py  Entity.py  HUD.py  Player.py  PowerUp.py  SaveTheBakery.py  __main__.py  config.py
save_the_bakery/assets/: heart.png~  spaceship.png~
